test/files/neg/warn-unused-params.check
warn-unused-params.scala:10: warning: parameter value b in method f is never used
        b: String,               // warn
        ^
warn-unused-params.scala:33: warning: parameter value s in method i is never used
  def i(implicit s: String) = 42           // yes, warn
                 ^
warn-unused-params.scala:50: warning: parameter value u in class Unusing is never used
class Unusing(u: Int) {       // warn
              ^
warn-unused-params.scala:60: warning: parameter value s in class CaseyAtTheBat is never used
case class CaseyAtTheBat(k: Int)(s: String)        // warn
                                 ^
warn-unused-params.scala:63: warning: parameter value readResolve in method f is never used
  def f(readResolve: Int) = 42           // warn
        ^
warn-unused-params.scala:77: warning: parameter value i in anonymous function is never used
  def f = (i: Int) => 42      // warn
            ^
warn-unused-params.scala:83: warning: parameter value i in anonymous function is never used
  def g = for (i <- List(1)) yield 42    // warn map.(i => 42)
               ^
error: No warnings can be incurred under -Xfatal-warnings.
7 warnings found
one error found
